RESOLVED FIXED51078
Mouse Events Not Received in Run Applet in their Own Process Mode
https://bugs.webkit.org/show_bug.cgi?id=51078
Summary Mouse Events Not Received in Run Applet in their Own Process Mode
Anders Carlsson
Reported 2010-12-14 17:41:13 PST
Mouse Events Not Received in Run Applet in their Own Process Mode
Attachments
Patch (2.25 KB, patch)
2010-12-14 17:43 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-14 17:41:28 PST
Anders Carlsson
Comment 2 2010-12-14 17:43:44 PST
Anders Carlsson
Comment 3 2010-12-14 17:56:44 PST
Note You need to log in before you can comment on or make changes to this bug.