Mouse Events Not Received in Run Applet in their Own Process Mode https://bugs.webkit.org/show_bug.cgi?id=51078 <rdar://problem/8333491>

Reviewed by Sam Weinig.

Make sure that Widget::handleEvent is called for applets as well.

* html/HTMLAppletElement.cpp:
(WebCore::HTMLAppletElement::defaultEventHandler):
* html/HTMLAppletElement.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@74086 bbb929c8-8fbe-4397-9dbb-9b2b20218538