third_party/WebKit/WebCore/html/HTMLAppletElement.cpp
@@ -31,6 +31,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "RenderApplet.h"
 #include "SecurityOrigin.h"
 #include "Settings.h"
+#include "Widget.h"
 
 namespace WebCore {
 
@@ -138,6 +139,17 @@ RenderObject* HTMLAppletElement::createRenderer(RenderArena*, RenderStyle* style
     }
 
     return RenderObject::createObject(this, style);
+}
+
+void HTMLAppletElement::defaultEventHandler(Event* event)
+{
+    RenderObject* r = renderer();
+    if (!r || !r->isWidget())
+        return;
+    Widget* widget = toRenderWidget(r)->widget();
+    if (!widget)
+        return;
+    widget->handleEvent(event);
 }
 
 RenderWidget* HTMLAppletElement::renderWidgetForJSBindings() const
