third_party/WebKit/WebCore/html/HTMLAppletElement.h
@@ -40,7 +40,9 @@ private:
     virtual bool rendererIsNeeded(RenderStyle*);
     virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
     virtual void finishParsingChildren();
-    
+
+    virtual void defaultEventHandler(Event*);
+
     virtual RenderWidget* renderWidgetForJSBindings() const;
 
     void setupApplet() const;
